fix(plc4j/opcua): [Bug]: OPC-UA returns multiple identical PlcSubscriptionHandles, one for every subscribed tag (Actually fixed this phenomenon for all drivers supporting subscriptions)
Fixes: #1896